# BorealisJobs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux-debug.yml  cmake-linux-min-size-rel.yml  cmake-linux-rel-with-deb-info.yml  cmake-linux-release.yml  cmake-win-debug.yml  cmake-win-min-size-rel.yml  cmake-win-rel-with-deb-info.yml  cmake-win-release.yml
BoostrealisJobs/: CMakeLists.txt
BoostrealisJobs/src/: job-system.cpp  job-system.h  job.h  scheduler.cpp  scheduler.h  spinlock.h
BorealisJobs/: CMakeLists.txt
BorealisJobs/src/: job-system.cpp  job-system.h  job.h
BorealisJobsLib/: CMakeLists.txt
BorealisJobsLib/src/: config.h  job-system.cpp  job-system.h  job.h  scoped-spinlock.h
BorealisJobsTest/: CMakeLists.txt
BorealisJobsTest/src/: main.cpp  test_jobs.cpp
src/: config.h  job-system.cpp  job-system.h  job.h  scoped-spinlock.h
